barra superior e inferior ok's

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="driveneats">Driveneats</div>
       <div class="seisminutos">Sua comida em 6 minutos</div>
     </div>
-    <div class="escolha1">Primeiro, seu prato</div>
+    <div class="escolha1 seuprato">Primeiro, seu prato</div>
     <div class="displayblocos">
       <div class="blocodeescolha">
          <div> <img class="img" src="frango_yin_yang 1.png"></div>
@@ -60,8 +60,29 @@
      </div>
     </div>
     <div class="escolha1 textosobremesa">Por fim, sua sobremesa</div>
-    <div class="displayblocos">
-      
+    <div class="displayblocos ultimobloco">
+      <div class="blocodeescolha">
+         <div> <img class="img" src="frango_yin_yang 1.png"></div>
+         <div class="texto1">Frango Yin Yang</div>
+         <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+         <div class="preco">R$ 14,90</div>
+      </div>
+      <div class="blocodeescolha">
+        <div> <img class="img" src="frango_yin_yang 1.png"></div>
+        <div class="texto1">Frango Yin Yang</div>
+        <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+        <div class="preco">R$ 14,90</div>
+     </div>
+     <div class="blocodeescolha">
+        <div> <img class="img" src="frango_yin_yang 1.png"></div>
+        <div class="texto1">Frango Yin Yang</div>
+        <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+        <div class="preco">R$ 14,90</div>
+     </div>
+    </div>
+    <div class="blocobotao">
+    <div class="caixabotao">Selecione os 3 itens <br>para fechar o pedido </div>
+    </div>
     
   
 
