--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class="driveneats">Driveneats</div>
       <div class="seisminutos">Sua comida em 6 minutos</div>
     </div>
+    <!-- +++++++++++++++++++++++++++++++++++primeiro seu prato-->
     <div class="escolha1 seuprato">Primeiro, seu prato</div>
     <div class="displayblocos">
       <div class="blocodeescolha">
@@ -29,56 +30,94 @@
         <div> <img class="img" src="frango_yin_yang 1.png"></div>
         <div class="texto1">Frango Yin Yang</div>
         <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
-        <div class="preco">R$ 14,90</div>
+        <div class="preco">R$ 23,90</div>
      </div>
      <div class="blocodeescolha">
         <div> <img class="img" src="frango_yin_yang 1.png"></div>
         <div class="texto1">Frango Yin Yang</div>
         <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
-        <div class="preco">R$ 14,90</div>
+        <div class="preco">R$ 12,60</div>
      </div>
+     <div class="blocodeescolha">
+      <div> <img class="img" src="frango_yin_yang 1.png"></div>
+      <div class="texto1">Frango Yin Yang</div>
+      <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+      <div class="preco">R$ 34,30</div>
+   </div>
+   <div class="blocodeescolha margemamais">
+      <div> <img class="img" src="frango_yin_yang 1.png"></div>
+      <div class="texto1">Frango Yin Yang</div>
+      <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+      <div class="preco">R$ 48,90</div>
+   </div>
     </div>
+    <!-- +++++++++++++++++++++++++++++++++++++++++++++++++ agora sua bebida-->
     <div class="escolha1">Agora, sua bebida</div>
     <div class="displayblocos">
       <div class="blocodeescolha">
-         <div> <img class="img" src="frango_yin_yang 1.png"></div>
+         <div> <img class="img" src="coquinha_gelada 1.png"></div>
          <div class="texto1">Frango Yin Yang</div>
          <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
-         <div class="preco">R$ 14,90</div>
+         <div class="preco">R$ 6,90</div>
       </div>
       <div class="blocodeescolha">
-        <div> <img class="img" src="frango_yin_yang 1.png"></div>
+        <div> <img class="img" src="coquinha_gelada 1.png"></div>
         <div class="texto1">Frango Yin Yang</div>
         <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
-        <div class="preco">R$ 14,90</div>
+        <div class="preco">R$ 2,80</div>
      </div>
      <div class="blocodeescolha">
-        <div> <img class="img" src="frango_yin_yang 1.png"></div>
+        <div> <img class="img" src="coquinha_gelada 1.png"></div>
         <div class="texto1">Frango Yin Yang</div>
         <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
-        <div class="preco">R$ 14,90</div>
+        <div class="preco">R$ 10,90</div>
      </div>
+     <div class="blocodeescolha">
+      <div> <img class="img" src="coquinha_gelada 1.png"></div>
+      <div class="texto1">Frango Yin Yang</div>
+      <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+      <div class="preco">R$ 14,90</div>
+   </div>
+   <div class="blocodeescolha margemamais">
+      <div> <img class="img" src="coquinha_gelada 1.png"></div>
+      <div class="texto1">Frango Yin Yang</div>
+      <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+      <div class="preco">R$ 23,90</div>
+   </div>
     </div>
+    <!-- +++++++++++++++++++++++++++++++++++ por fim, sua sobremesa-->
     <div class="escolha1 textosobremesa">Por fim, sua sobremesa</div>
     <div class="displayblocos ultimobloco">
       <div class="blocodeescolha">
-         <div> <img class="img" src="frango_yin_yang 1.png"></div>
+         <div> <img class="img" src="pudim 1.png"></div>
          <div class="texto1">Frango Yin Yang</div>
          <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
-         <div class="preco">R$ 14,90</div>
+         <div class="preco">R$ 3,90</div>
       </div>
       <div class="blocodeescolha">
-        <div> <img class="img" src="frango_yin_yang 1.png"></div>
+        <div> <img class="img" src="pudim 1.png"></div>
         <div class="texto1">Frango Yin Yang</div>
         <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
-        <div class="preco">R$ 14,90</div>
+        <div class="preco">R$ 4,80</div>
      </div>
      <div class="blocodeescolha">
-        <div> <img class="img" src="frango_yin_yang 1.png"></div>
+        <div> <img class="img" src="pudim 1.png"></div>
         <div class="texto1">Frango Yin Yang</div>
         <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
-        <div class="preco">R$ 14,90</div>
+        <div class="preco">R$ 10,20</div>
      </div>
+     <div class="blocodeescolha">
+      <div> <img class="img" src="pudim 1.png"></div>
+      <div class="texto1">Frango Yin Yang</div>
+      <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+      <div class="preco">R$ 14,90</div>
+   </div>
+   <div class="blocodeescolha margemamais">
+      <div> <img class="img" src="pudim 1.png"></div>
+      <div class="texto1">Frango Yin Yang</div>
+      <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+      <div class="preco">R$ 25,50</div>
+   </div>
     </div>
     <div class="blocobotao">
     <div class="caixabotao">Selecione os 3 itens <br>para fechar o pedido </div>
