--- a/index.html
+++ b/index.html
@@ -18,113 +18,113 @@
       <div class="seisminutos">Sua comida em 6 minutos</div>
     </div>
     <!-- +++++++++++++++++++++++++++++++++++primeiro seu prato-->
-    <div class="escolha1 seuprato">Primeiro, seu prato</div>
-    <div class="displayblocos">
-      <div class="blocodeescolha">
-         <div> <img class="img" src="frango_yin_yang 1.png"></div>
+      <div class="escolha1 seuprato">Primeiro, seu prato</div>
+      <div class="displayblocos fileira1">
+         <div class="blocodeescolha b11" onclick="bordaverde1(this)">
+           <div class="displayimg"> <img class="img" src="frango_yin_yang 1.png"></div>
+           <div class="texto1">Frango Yin Yang</div>
+           <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+           <div class="preco">R$ 14,90</div>
+         </div>
+         <div class="blocodeescolha b21" onclick="bordaverde1(this)">
+           <div class="displayimg"> <img class="img" src="frango_yin_yang 1.png"></div>
+           <div class="texto1">Frango Yin Yang</div>
+           <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+           <div class="preco">R$ 23,90</div>
+         </div>
+         <div class="blocodeescolha b31" onclick="bordaverde1(this)">
+           <div class="displayimg"> <img class="img" src="frango_yin_yang 1.png"></div>
+           <div class="texto1">Frango Yin Yang</div>
+           <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+           <div class="preco">R$ 12,60</div>
+         </div>
+         <div class="blocodeescolha b41" onclick="bordaverde1(this)">
+           <div class="displayimg"> <img class="img" src="frango_yin_yang 1.png"></div>
+           <div class="texto1">Frango Yin Yang</div>
+           <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+           <div class="preco">R$ 34,30</div>
+         </div>
+        <div class="blocodeescolha margemamais b51" onclick="bordaverde1(this)">
+         <div class="displayimg"> <img class="img" src="frango_yin_yang 1.png"></div>
          <div class="texto1">Frango Yin Yang</div>
          <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
-         <div class="preco">R$ 14,90</div>
+         <div class="preco">R$ 48,90</div>
+        </div>
       </div>
-      <div class="blocodeescolha">
-        <div> <img class="img" src="frango_yin_yang 1.png"></div>
-        <div class="texto1">Frango Yin Yang</div>
-        <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
-        <div class="preco">R$ 23,90</div>
-     </div>
-     <div class="blocodeescolha">
-        <div> <img class="img" src="frango_yin_yang 1.png"></div>
-        <div class="texto1">Frango Yin Yang</div>
-        <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
-        <div class="preco">R$ 12,60</div>
-     </div>
-     <div class="blocodeescolha">
-      <div> <img class="img" src="frango_yin_yang 1.png"></div>
-      <div class="texto1">Frango Yin Yang</div>
-      <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
-      <div class="preco">R$ 34,30</div>
-   </div>
-   <div class="blocodeescolha margemamais">
-      <div> <img class="img" src="frango_yin_yang 1.png"></div>
-      <div class="texto1">Frango Yin Yang</div>
-      <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
-      <div class="preco">R$ 48,90</div>
-   </div>
-    </div>
     <!-- +++++++++++++++++++++++++++++++++++++++++++++++++ agora sua bebida-->
     <div class="escolha1">Agora, sua bebida</div>
-    <div class="displayblocos">
-      <div class="blocodeescolha">
-         <div> <img class="img" src="coquinha_gelada 1.png"></div>
-         <div class="texto1">Frango Yin Yang</div>
-         <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+    <div class="displayblocos fileira2">
+      <div class="blocodeescolha b12" onclick="bordaverde2(this)">
+         <div class="displayimg"> <img class="img" src="coquinha_gelada 1.png"></div>
+         <div class="texto1">Coquinha gelada</div>
+         <div class="texto2">Lata 350ml </div>
          <div class="preco">R$ 6,90</div>
       </div>
-      <div class="blocodeescolha">
-        <div> <img class="img" src="coquinha_gelada 1.png"></div>
-        <div class="texto1">Frango Yin Yang</div>
-        <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+      <div class="blocodeescolha b22" onclick="bordaverde2(this)">
+        <div class="displayimg"> <img class="img" src="coquinha_gelada 1.png"></div>
+        <div class="texto1">Coquinha gelada</div>
+        <div class="texto2">Lata 350ml </div>
         <div class="preco">R$ 2,80</div>
      </div>
-     <div class="blocodeescolha">
-        <div> <img class="img" src="coquinha_gelada 1.png"></div>
-        <div class="texto1">Frango Yin Yang</div>
-        <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+     <div class="blocodeescolha b32" onclick="bordaverde2(this)">
+        <div class="displayimg"> <img class="img" src="coquinha_gelada 1.png"></div>
+        <div class="texto1">Coquinha gelada</div>
+        <div class="texto2">Lata 350ml </div>
         <div class="preco">R$ 10,90</div>
      </div>
-     <div class="blocodeescolha">
-      <div> <img class="img" src="coquinha_gelada 1.png"></div>
-      <div class="texto1">Frango Yin Yang</div>
-      <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+     <div class="blocodeescolha b42" onclick="bordaverde2(this)">
+      <div class="displayimg"> <img class="img" src="coquinha_gelada 1.png"></div>
+      <div class="texto1">Coquinha gelada</div>
+      <div class="texto2">Lata 350ml </div>
       <div class="preco">R$ 14,90</div>
-   </div>
-   <div class="blocodeescolha margemamais">
-      <div> <img class="img" src="coquinha_gelada 1.png"></div>
-      <div class="texto1">Frango Yin Yang</div>
-      <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+    </div>
+    <div class="blocodeescolha margemamais b52" onclick="bordaverde2(this)">
+      <div class="displayimg"> <img class="img" src="coquinha_gelada 1.png"></div>
+      <div class="texto1">Coquinha gelada</div>
+      <div class="texto2">Lata 350ml </div>
       <div class="preco">R$ 23,90</div>
-   </div>
+    </div>
     </div>
     <!-- +++++++++++++++++++++++++++++++++++ por fim, sua sobremesa-->
     <div class="escolha1 textosobremesa">Por fim, sua sobremesa</div>
-    <div class="displayblocos ultimobloco">
-      <div class="blocodeescolha">
-         <div> <img class="img" src="pudim 1.png"></div>
-         <div class="texto1">Frango Yin Yang</div>
-         <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+    <div class="displayblocos fileira3 ultimobloco">
+      <div class="blocodeescolha b13" onclick="bordaverde3(this)">
+         <div class="displayimg"> <img class="img" src="pudim 1.png"></div>
+         <div class="texto1">Pudim</div>
+         <div class="texto2">Apenas pudim</div>
          <div class="preco">R$ 3,90</div>
       </div>
-      <div class="blocodeescolha">
-        <div> <img class="img" src="pudim 1.png"></div>
-        <div class="texto1">Frango Yin Yang</div>
-        <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+      <div class="blocodeescolha b23" onclick="bordaverde3(this)">
+        <div class="displayimg"> <img class="img" src="pudim 1.png"></div>
+        <div class="texto1">Pudim</div>
+        <div class="texto2">Apenas pudim</div>
         <div class="preco">R$ 4,80</div>
      </div>
-     <div class="blocodeescolha">
-        <div> <img class="img" src="pudim 1.png"></div>
-        <div class="texto1">Frango Yin Yang</div>
-        <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+     <div class="blocodeescolha b33" onclick="bordaverde3(this)">
+        <div class="displayimg"> <img class="img" src="pudim 1.png"></div>
+        <div class="texto1">Pudim</div>
+        <div class="texto2">Apenas pudim</div>
         <div class="preco">R$ 10,20</div>
      </div>
-     <div class="blocodeescolha">
-      <div> <img class="img" src="pudim 1.png"></div>
-      <div class="texto1">Frango Yin Yang</div>
-      <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+     <div class="blocodeescolha b43" onclick="bordaverde3(this)">
+      <div class="displayimg"> <img class="img" src="pudim 1.png"></div>
+      <div class="texto1">Pudim</div>
+      <div class="texto2">Apenas pudim</div>
       <div class="preco">R$ 14,90</div>
-   </div>
-   <div class="blocodeescolha margemamais">
-      <div> <img class="img" src="pudim 1.png"></div>
-      <div class="texto1">Frango Yin Yang</div>
-      <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
+    </div>
+    <div class="blocodeescolha margemamais b53" onclick="bordaverde3(this)">
+      <div class="displayimg"> <img class="img" src="pudim 1.png"></div>
+      <div class="texto1">Pudim</div>
+      <div class="texto2">Apenas pudim</div>
       <div class="preco">R$ 25,50</div>
-   </div>
+    </div>
     </div>
     <div class="blocobotao">
-    <div class="caixabotao">Selecione os 3 itens <br>para fechar o pedido </div>
+    <div class="caixabotao" onclick="pedidofechado()">Selecione os 3 itens <br>para fechar o pedido </div>
     </div>
     
   
 
-   <script src="script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
