--- a/index.html
+++ b/index.html
@@ -22,49 +22,40 @@
       <div class="displayblocos fileira1">
          <div class="blocodeescolha b11" onclick="bordaverde1(this)">
            <div class="displayimg"> <img class="img" src="frango_yin_yang 1.png"></div>
-           <div class="texto1">Frango Yin Yang</div>
+           <div class="texto1 frango">Frango Yin Yang</div>
            <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
            <div class="displaypreco"> 
           <div>R$</div>
-          <div class="preco"> 10.90</div>
+          <div class="preco"> 10,90</div>
          </div>
          </div>
          <div class="blocodeescolha b21" onclick="bordaverde1(this)">
            <div class="displayimg"> <img class="img" src="frango_yin_yang 1.png"></div>
-           <div class="texto1">Frango Yin Yang</div>
+           <div class="texto1 carne">Carne Yin Yang</div>
            <div class="texto2">Um pouco de batata. <br> um pouco de salada </div>
            <div class="displaypreco"> 
           <div>R$</div>
-          <div class="preco"> 15.90</div>
+          <div class="preco"> 15,90</div>
          </div>
          </div>
          <div class="blocodeescolha b31" onclick="bordaverde1(this)">
            <div class="displayimg"> <img class="img" src="frango_yin_yang 1.png"></div>
-           <div class="texto1">Frango Yin Yang</div>
+           <div class="texto1">Peixe Yin Yang</div>
            <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
            <div class="displaypreco"> 
           <div>R$</div>
-          <div class="preco"> 12.90</div>
+          <div class="preco"> 12,90</div>
          </div>
          </div>
          <div class="blocodeescolha b41" onclick="bordaverde1(this)">
            <div class="displayimg"> <img class="img" src="frango_yin_yang 1.png"></div>
-           <div class="texto1">Frango Yin Yang</div>
+           <div class="texto1">Picanha Yin Yang</div>
            <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
            <div class="displaypreco"> 
           <div>R$</div>
-          <div class="preco"> 32.90</div>
+          <div class="preco"> 32,90</div>
          </div>
          </div>
-        <div class="blocodeescolha margemamais b51" onclick="bordaverde1(this)">
-         <div class="displayimg"> <img class="img" src="frango_yin_yang 1.png"></div>
-         <div class="texto1">Frango Yin Yang</div>
-         <div class="texto2">Um pouco de batata, <br> um pouco de salada </div>
-         <div class="displaypreco"> 
-          <div>R$</div>
-          <div class="preco"> 40.90</div>
-         </div>
-        </div>
       </div>
     <!-- +++++++++++++++++++++++++++++++++++++++++++++++++ agora sua bebida-->
     <div class="escolha1">Agora, sua bebida</div>
@@ -75,44 +66,35 @@
          <div class="texto2">Lata 350ml </div>
          <div class="displaypreco"> 
           <div>R$</div>
-          <div class="preco"> 23.90</div>
+          <div class="preco"> 23,90</div>
          </div>
          
       </div>
       <div class="blocodeescolha b22" onclick="bordaverde2(this)">
         <div class="displayimg"> <img class="img" src="coquinha_gelada 1.png"></div>
-        <div class="texto1">Coquinha gelada</div>
+        <div class="texto1">Coca gelada</div>
         <div class="texto2">Lata 350ml </div>
         <div class="displaypreco"> 
           <div>R$</div>
-          <div class="preco"> 12.90</div>
+          <div class="preco"> 12,90</div>
          </div>
      </div>
      <div class="blocodeescolha b32" onclick="bordaverde2(this)">
         <div class="displayimg"> <img class="img" src="coquinha_gelada 1.png"></div>
-        <div class="texto1">Coquinha gelada</div>
-        <div class="texto2">Lata 350ml </div>
+        <div class="texto1">refri gelada</div>
+        <div class="texto2">Lata 500ml </div>
         <div class="displaypreco"> 
           <div>R$</div>
-          <div class="preco"> 16.90</div>
+          <div class="preco"> 16,90</div>
          </div>
      </div>
      <div class="blocodeescolha b42" onclick="bordaverde2(this)">
       <div class="displayimg"> <img class="img" src="coquinha_gelada 1.png"></div>
-      <div class="texto1">Coquinha gelada</div>
-      <div class="texto2">Lata 350ml </div>
+      <div class="texto1">Fanta Laranja gelada</div>
+      <div class="texto2">Lata 2l </div>
       <div class="displaypreco"> 
           <div>R$</div>
-          <div class="preco"> 8.90</div>
-         </div>
-    </div>
-    <div class="blocodeescolha margemamais b52" onclick="bordaverde2(this)">
-      <div class="displayimg"> <img class="img" src="coquinha_gelada 1.png"></div>
-      <div class="texto1">Coquinha gelada</div>
-      <div class="texto2">Lata 350ml </div>
-      <div class="displaypreco"> 
-          <div>R$</div>
-          <div class="preco"> 6.90</div>
+          <div class="preco"> 8,90</div>
          </div>
     </div>
     </div>
@@ -125,45 +107,36 @@
          <div class="texto2">Apenas pudim</div>
          <div class="displaypreco"> 
           <div>R$</div>
-          <div class="preco"> 15.90</div>
+          <div class="preco"> 15,90</div>
          </div>
       </div>
       <div class="blocodeescolha b23" onclick="bordaverde3(this)">
         <div class="displayimg"> <img class="img" src="pudim 1.png"></div>
-        <div class="texto1">Pudim</div>
+        <div class="texto1">Torta</div>
         <div class="texto2">Apenas pudim</div>
         <div class="displaypreco"> 
           <div>R$</div>
-          <div class="preco"> 14.90</div>
+          <div class="preco"> 14,90</div>
          </div>
      </div>
      <div class="blocodeescolha b33" onclick="bordaverde3(this)">
         <div class="displayimg"> <img class="img" src="pudim 1.png"></div>
-        <div class="texto1">Pudim</div>
+        <div class="texto1">Lasanha</div>
         <div class="texto2">Apenas pudim</div>
         <div class="displaypreco"> 
           <div>R$</div>
-          <div class="preco"> 23.90</div>
+          <div class="preco"> 23,90</div>
          </div>
      </div>
      <div class="blocodeescolha b43" onclick="bordaverde3(this)">
       <div class="displayimg"> <img class="img" src="pudim 1.png"></div>
-      <div class="texto1">Pudim</div>
+      <div class="texto1">cremin</div>
       <div class="texto2">Apenas pudim</div>
       <div class="displaypreco"> 
           <div>R$</div>
-          <div class="preco"> 4.90</div>
+          <div class="preco"> 4,90</div>
          </div>
-    </div>
-    <div class="blocodeescolha margemamais b53" onclick="bordaverde3(this)">
-      <div class="displayimg"> <img class="img" src="pudim 1.png"></div>
-      <div class="texto1">Pudim</div>
-      <div class="texto2">Apenas pudim</div>
-      <div class="displaypreco"> 
-          <div>R$</div>
-          <div class="preco"> 8.90</div>
-         </div>
-    </div>
+     </div>
     </div>
     <div class="blocobotao">
     <!-- <a class="linkbotao " href="https://wa.me/5591989391048nowhatsapp?text=urldamensagempronta">
