ops, agora sim, finalizado

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
      </div>
      <div class="blocodeescolha b42" onclick="bordaverde2(this)">
       <div class="displayimg"> <img class="img" src="coquinha_gelada 1.png"></div>
-      <div class="texto1">Fanta Laranja gelada</div>
+      <div class="texto1">Fanta Laranja</div>
       <div class="texto2">Lata 2l </div>
       <div class="displaypreco"> 
           <div>R$</div>
@@ -104,7 +104,7 @@
       <div class="blocodeescolha b13" onclick="bordaverde3(this)">
          <div class="displayimg"> <img class="img" src="pudim 1.png"></div>
          <div class="texto1">Pudim</div>
-         <div class="texto2">Apenas pudim</div>
+         <div class="texto2">Com doce</div>
          <div class="displaypreco"> 
           <div>R$</div>
           <div class="preco"> 15,90</div>
@@ -113,7 +113,7 @@
       <div class="blocodeescolha b23" onclick="bordaverde3(this)">
         <div class="displayimg"> <img class="img" src="pudim 1.png"></div>
         <div class="texto1">Torta</div>
-        <div class="texto2">Apenas pudim</div>
+        <div class="texto2">Com doce</div>
         <div class="displaypreco"> 
           <div>R$</div>
           <div class="preco"> 14,90</div>
@@ -122,7 +122,7 @@
      <div class="blocodeescolha b33" onclick="bordaverde3(this)">
         <div class="displayimg"> <img class="img" src="pudim 1.png"></div>
         <div class="texto1">Lasanha</div>
-        <div class="texto2">Apenas pudim</div>
+        <div class="texto2">Com doce</div>
         <div class="displaypreco"> 
           <div>R$</div>
           <div class="preco"> 23,90</div>
@@ -131,7 +131,7 @@
      <div class="blocodeescolha b43" onclick="bordaverde3(this)">
       <div class="displayimg"> <img class="img" src="pudim 1.png"></div>
       <div class="texto1">cremin</div>
-      <div class="texto2">Apenas pudim</div>
+      <div class="texto2">Com doce</div>
       <div class="displaypreco"> 
           <div>R$</div>
           <div class="preco"> 4,90</div>
